--- a/_posts/2016-06-14-modulo-2.md
+++ b/_posts/2016-06-14-modulo-2.md
@@ -5,6 +5,8 @@ date:   2016-06-14 02:00:00
 categories: 
 ---
 
+# Working with datasets
+
 - How to read your data in?  (csv, excel, .data, other formats)
 - How to perform basic operations: sum, count, min, max, summary, 
 - Avoiding headaches: data structure
