--- a/_posts/2016-06-14-modulo-1.md
+++ b/_posts/2016-06-14-modulo-1.md
@@ -9,7 +9,7 @@ categories:
 
 - What is R
 - Why is R getting so popular?
-- Applications of R
+- Applications of R (data cleaning, reading, visualizing, web apps, etc.)
 - Compared to SPSS, Stata, SAS, etc...
 - There is such thing as a free lunch
 - Who is in? Go [HERE](http://goo.gl/forms/PfAncjOa11uMePO53) and fill out a survey
@@ -29,6 +29,8 @@ categories:
 ![GitHub Logo](/images/rstudio.png)
 
 # Understanding "packages"
+
+de8a1e+0
 
 A few good packages to install now:
 
@@ -98,3 +100,11 @@ Making plots
 - histogram
 - barplot
 - scatterplot
+
+Using a real dataset
+
+<pre>
+library(gapminder)
+library(dplyr)
+gm <- gapminder
+</pre>
