--- a/_posts/2016-06-14-modulo-1.md
+++ b/_posts/2016-06-14-modulo-1.md
@@ -108,3 +108,10 @@ library(gapminder)
 library(dplyr)
 gm <- gapminder
 </pre>
+
+<pre>
+all_ages <- c(25, 26, 35, 40, 28,
+              30, 28, 32, 31, 28, 24, 25, 23, 29, 23, 35, 35, 28, 35, 34, 27, 34, 30, 35)
+all_money <- c(150, 1000, 120, 500, 100, 100, 50, 200, 25, 100, 2000, 100, 300, 500, 95, 100, 0, 90, 900, 16, 200, 50, 1000, 100)
+
+</pre>
