updating website for module 2

--- a/_posts/2016-06-14-modulo-2.md
+++ b/_posts/2016-06-14-modulo-2.md
@@ -11,28 +11,36 @@ categories:
 
 How to use R with YOUR data, and how to use it with ANY data.
 
+## Repaso do módulo 1
+
+- Install packages
+- Use packages  
+- Create an object with one element
+- Create an object with multiple elements
+- Make plots
+
 ## How to read data into R
 
-- csv
-- excel
-- .RData
-- .dat
-- database / mysql connections
+- Read in a csv
+- Understand a dataframe (object of objects)
+- Understand data structures
 
-## Understanding the dataframe
+## Understanding a dataframe
+- Explore a dataframe  
+    -dimensions, head, tail
 
-- row / column notation
-- the important $
+## Understanding one variable
+- The important $
+- Arithmetic, summary
+- Explore variables in-depth  
+    -categorical: tables, barplot  
+    -numeric: summarizations, histogram  
 
-## Basic operations
+## Understanding multiple variables
+- The important [,]
+    - Categorical + categorical = table + barplot
+    - Numeric + numeric = cor + plot
+    - Numeric + categorical = visual exploration
 
-- sum
-- count
-- min
-- max
-- summary
-- table
-
-## Avoiding headaches
-
-- Numerics, characters and factors
+## Creating new variables
+- BMI
