--- a/_posts/2016-06-14-modulo-2.md
+++ b/_posts/2016-06-14-modulo-2.md
@@ -11,6 +11,7 @@ categories:
 
 How to use R with YOUR data, and how to use it with ANY data.
 
+
 ## Repaso do módulo 1
 
 - Install packages
@@ -18,6 +19,9 @@ How to use R with YOUR data, and how to use it with ANY data.
 - Create an object with one element
 - Create an object with multiple elements
 - Make plots
+
+## Download example data
+[www.cismr.com/data.csv](www.cismr.com/data.csv)
 
 ## How to read data into R
 
