--- a/_posts/2016-06-14-modulo-3.md
+++ b/_posts/2016-06-14-modulo-3.md
@@ -7,10 +7,17 @@ categories:
 
 2016-06-22 13:00-15:00
 
-# Manipulating data 
+# Manipulating data and making maps
 
-There are some good packages for manipulating data in R.
+GIS is easy in R. Today we're going to use maps to visually explore a (fake) census dataset.
 
-## dplyr 
+# Preparation  
 
-- Querying, filtering, summarizing, mutating
+Please download this dataset, and save it as "census.csv" on your computer (ie, don't change the name!)
+[http://cismr.com/census.csv](http://cismr.com/census.csv)
+
+Please install the "raster" package by running:
+
+<pre>
+install.packages('raster')
+</pre>
