--- a/_posts/2016-06-14-modulo-3.md
+++ b/_posts/2016-06-14-modulo-3.md
@@ -16,6 +16,11 @@ GIS is easy in R. Today we're going to use maps to visually explore a (fake) cen
 Please download this dataset, and save it as "census.csv" on your computer (ie, don't change the name!)
 [http://cismr.com/census.csv](http://cismr.com/census.csv)
 
+Please download the following R script.
+
+[http://cismr.com/modulo3activity.R](http://cismr.com/modulo3activity.R)
+
+
 Please install the "raster" package by running:
 
 <pre>
