--- a/_posts/2016-06-14-modulo-3.md
+++ b/_posts/2016-06-14-modulo-3.md
@@ -13,16 +13,16 @@ GIS is easy in R. Today we're going to use maps to visually explore a (fake) cen
 
 # Preparation  
 
-1. Please download this dataset, and save it as "census.csv" on your computer (ie, don't change the name!)
+- Please download this dataset, and save it as "census.csv" on your computer (ie, don't change the name!)
 
 [http://cismr.com/census.csv](http://cismr.com/census.csv)
 
-2. Please download the following R script.
+- Please download the following R script.
 
 [http://cismr.com/modulo3activity.R](http://cismr.com/modulo3activity.R)
 
 
-3. Please install the "raster" package by running:
+- Please install the "raster" package by running:
 
 <pre>
 install.packages('raster')
