--- a/_posts/2016-06-14-modulo-4.md
+++ b/_posts/2016-06-14-modulo-4.md
@@ -7,18 +7,16 @@ categories:
 
 2016-06-28 13:00-15:00
 
-# Visualizing data
+# Performing an entire analysis from A to Z
 
-Some tools for making beautiful charts following the "grammar of graphics"
+For this class, YOU are the teacher. 
 
-## ggplot2 and the grammar of graphics
+## Preparation
 
-- barplots
-- scatterplots
-- histograms
-- stacking
-- aesthetics and grouping
+- Please download the following R script.
 
-## ggmap
+[http://cismr.com/modulo4activity.R](http://cismr.com/modulo4activity.R)
 
-- How to make information-rich and beautiful maps
+- Please install the following package if you have not already: gapminder
+
+## Activity
