--- a/_posts/2016-06-14-modulo-4.md
+++ b/_posts/2016-06-14-modulo-4.md
@@ -20,3 +20,9 @@ For this class, YOU are the teacher.
 - Please install the following package if you have not already: gapminder
 
 ## Activity
+
+- Open the R script on your computer.
+- Follow the instructions in the R script, adding code to it.
+- There are 14 questions/problems. At the end of each question, you should write your answer in code. Feel free to add comments or questions also.
+- If you have problems, call "joebrew" on skype or google hangouts.
+- When you are finished, email your "modulo4activity.R" script to joebrew@gmail.com.
