--- a/_posts/2016-06-14-modulo-5.md
+++ b/_posts/2016-06-14-modulo-5.md
@@ -10,16 +10,15 @@ categories:
 
 # Putting it all together
 
-## A review of lessons learned
+Today is your final evaluation. But before we get there, here are some more resources for future learning in R.
 
-- Exercise combining all new skills
+## Books
 
-## Advanced tools
+[http://cismr.com/rinaction.pdf](R in Action)
 
-- leaflet, pplotly, rcharts, shiny
 
-## Resources for further learning
+## Advanced packages
 
-- books and webpages for learning on your own
+- dplyr, leaflet, pplotly, rcharts, shiny
 
-end
+# Evaluation 
